--- a/world.css
+++ b/world.css
@@ -1,1 +1,95 @@
 /* Add your own styles */
+html {
+    background-color: rgb(177, 78, 99);
+    font-size: 18px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #ffffff;
+}
+
+h1 {
+    font-size: 50px;
+    font-family: "Ubuntu Mono", monospace;
+    font-weight: 700;
+    font-style: normal;
+    color:#ffffff;
+    text-align: center;
+    border: none;
+}
+
+#controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: auto;
+}
+
+#country {
+    background-color: rgb(255, 255, 255);
+    height: 40px;
+    width: 470px;
+    border: 1px solid var(--lighterBlue);
+    margin: 10px 0;
+    font-family: "Ubuntu Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+    text-align: center;
+}
+
+#result {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: auto;
+}
+
+label {
+    display: flex;
+    font-size: 40px;
+    font-family: "Ubuntu Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    color:#ffffff;
+    text-align: center;
+    padding-right: 20px;
+}
+
+#lookup {
+    height: 42px;
+    width: 170px;
+    color: #ffffff;
+    background-color: rgb(49, 148, 102);
+    border: 1px solid var(--lighterBlue);
+    margin: 10px 0;
+    font-family: "Ubuntu Mono", monospace;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.ubuntu-mono-regular {
+    font-family: "Ubuntu Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .ubuntu-mono-bold {
+    font-family: "Ubuntu Mono", monospace;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .ubuntu-mono-regular-italic {
+    font-family: "Ubuntu Mono", monospace;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .ubuntu-mono-bold-italic {
+    font-family: "Ubuntu Mono", monospace;
+    font-weight: 700;
+    font-style: italic;
+  }
