--- a/world.css
+++ b/world.css
@@ -16,6 +16,23 @@ h1 {
     border: none;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td {
+    text-align: left;
+    padding: 10px;
+    border: 1px solid #ffffff;
+}
+
+th {
+    text-align: left;
+    padding: 10px;
+    border: 1px solid #ffffff; 
+}
+
 #controls {
     display: flex;
     justify-content: center;
